cabal-version:       >=1.10

name:                wt
version:             0.1.0.0
build-type:          Simple

executable wt
  default-language:    Haskell2010
  main-is:             Main.hs
  hs-source-dirs:      src

  ghc-options: -Wall -Werror -threaded -fprint-explicit-kinds

  other-modules: Wt.Data.Torrent
                 Wt.Network.HTTP.TorrentSearch
                 Wt.Operations
                 Wt.UI.Header
                 Wt.UI.Select
                 Wt.UI.SelectFile
                 Wt.UI.SelectTorrent

  build-depends:   base >=4.12
                 , aeson
                 , brick
                 , bytestring
                 , directory
                 , http-client
                 , http-client-tls
                 , optparse-applicative
                 , temporary
                 , text
                 , typed-process
                 , vector
                 , vty